layout adjustment. fixing gradient flickering

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background: linear-gradient(to left bottom, black, #181818, #303030)
+  background: linear-gradient(to left bottom, black, #181818, #303030);
 }
 
 .top-tags {
@@ -29,7 +29,7 @@
 .contact-page {
   .text-zone {
     position: absolute;
-    left: 10%;
+    left: 20%;
     top: 50%;
     transform: translateY(-50%);
     width: 60%;
